<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Search always visible in toolbar -->
    <item
        android:id="@+id/action_search"
        android:title="@string/search_trips"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <!-- Overflow items -->
    <item
        android:id="@+id/action_statistics"
        android:title="@string/statistics_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_support"
        android:title="@string/support_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_dark_mode"
        android:title="@string/dark_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_all"
        android:title="@string/clear_all"
        app:showAsAction="never" />

</menu>
